Update Project configuration for do net 4.0

--- a/atcTimeseriesBinary/atcTimeseriesBinary-D4EM10.vbproj
+++ b/atcTimeseriesBinary/atcTimeseriesBinary-D4EM10.vbproj
@@ -126,7 +126,7 @@
     <Folder Include="My Project\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\MapWindow4Plugins\MapWinUtility\MapWinUtility-D4EM10.vbproj">
+    <ProjectReference Include="..\MapWinUtility\MapWinUtility-D4EM10.vbproj">
       <Project>{3C991AE4-9EDB-4C24-BAF3-42F7303D7DF3}</Project>
       <Name>MapWinUtility-D4EM10</Name>
       <Private>False</Private>
