--- a/atcGraphExperimental/atcGraph15.vbproj
+++ b/atcGraphExperimental/atcGraph15.vbproj
@@ -121,6 +121,7 @@
     </Compile>
     <Compile Include="atcTimeseriesPointList.vb" />
     <Compile Include="clsGraphBase.vb" />
+    <Compile Include="clsGraphBoxWhisker.vb" />
     <Compile Include="clsGraphCumulativeDifference.vb" />
     <Compile Include="clsGraphDoubleMass.vb" />
     <Compile Include="clsGraphFrequency.vb" />
