--- a/atcGraphExperimental/atcGraph15.vbproj
+++ b/atcGraphExperimental/atcGraph15.vbproj
@@ -125,6 +125,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="atcTimeseriesPointList.vb" />
+    <Compile Include="clsGraphBar.vb" />
     <Compile Include="clsGraphBase.vb" />
     <Compile Include="clsGraphBoxWhisker.vb" />
     <Compile Include="clsGraphCumulativeDifference.vb" />
