Ignore list was updated.

--- a/.gitignore
+++ b/.gitignore
@@ -315,3 +315,4 @@
 /atcUSGSDF2P/obj/x86/Debug/atcUSGSDF2P15.vbproj.GenerateResource.Cache
 /atcUSGSDF2P/obj/x86/Debug/atcUSGSDF2P15.vbproj.FileListAbsolute.txt
 /atcUSGSDF2P/obj/x86/Debug/atcUSGSDF2P.Resources.resources
+/atcMetCmp/obj/Debug
