--- a/atcData/atcData15.vbproj
+++ b/atcData/atcData15.vbproj
@@ -127,6 +127,14 @@
       <Name>System.Windows.Forms</Name>
     </Reference>
     <Reference Include="System.XML" />
+    <ProjectReference Include="..\atcControls\atcControls15.vbproj">
+      <Project>{f73269c2-2f1f-4ac0-8162-7b19995dd53c}</Project>
+      <Name>atcControls15</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\atcUtility\atcUtility15.vbproj">
+      <Project>{67027820-9036-481e-80f6-077e5085f59d}</Project>
+      <Name>atcUtility15</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MapWinUtility\BASINS-MapWinUtility15.vbproj">
       <Project>{33E88992-742F-4D13-823F-35D6A07B1AA1}</Project>
       <Name>BASINS-MapWinUtility15</Name>
