--- a/atcSynopticAnalysis/atcSynopticAnalysis15.vbproj
+++ b/atcSynopticAnalysis/atcSynopticAnalysis15.vbproj
@@ -157,6 +157,10 @@
       <Project>{ac301067-c700-4cea-bed6-97f90960f5f2}</Project>
       <Name>atcData15</Name>
     </ProjectReference>
+    <ProjectReference Include="..\atcUtility\atcUtility15.vbproj">
+      <Project>{67027820-9036-481e-80f6-077e5085f59d}</Project>
+      <Name>atcUtility15</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MapWinUtility\BASINS-MapWinUtility15.vbproj">
       <Project>{33e88992-742f-4d13-823f-35d6a07b1aa1}</Project>
       <Name>BASINS-MapWinUtility15</Name>
