--- a/atcData/atcDataDotSpatial.vbproj
+++ b/atcData/atcDataDotSpatial.vbproj
@@ -152,7 +152,7 @@
       <Name>System.Windows.Forms</Name>
     </Reference>
     <Reference Include="System.XML" />
-    <ProjectReference Include="..\MapWinUtility\BASINS-MapWinUtility15.vbproj">
+    <ProjectReference Include="..\..\MapWindow4Plugins\MapWinUtility\BASINS-MapWinUtility10.vbproj">
       <Project>{33E88992-742F-4D13-823F-35D6A07B1AA1}</Project>
       <Name>BASINS-MapWinUtility10</Name>
       <Private>False</Private>
