--- a/BASINS/GWToolbox15.vbproj
+++ b/BASINS/GWToolbox15.vbproj
@@ -115,43 +115,42 @@
     <ProjectReference Include="..\atcD4EMLauncher\atcD4EMLauncher.vbproj">
       <Project>{6cde2fe3-deba-46ba-b395-8f71f87159b0}</Project>
       <Name>atcD4EMLauncher</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\atcData\atcData15.vbproj">
-      <Project>{ac301067-c700-4cea-bed6-97f90960f5f2}</Project>
-      <Name>atcData15</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\atcMwGisUtility\atcMwGisUtility15.vbproj">
-      <Project>{350d3be7-35a4-4b09-9d28-dde2f6b716cd}</Project>
-      <Name>atcMwGisUtility15</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\atcProjector\atcProjector15.vbproj">
-      <Project>{863771d3-ea5b-45d2-8416-b75e9ada8d7b}</Project>
-      <Name>atcProjector15</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\MapWinUtility\BASINS-MapWinUtility15.vbproj">
       <Project>{33e88992-742f-4d13-823f-35d6a07b1aa1}</Project>
       <Name>BASINS-MapWinUtility15</Name>
-      <Private>True</Private>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\atcMwGisUtility\atcMwGisUtility15.vbproj">
+      <Project>{350d3be7-35a4-4b09-9d28-dde2f6b716cd}</Project>
+      <Name>atcMwGisUtility15</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\atcProjector\atcProjector15.vbproj">
+      <Project>{863771d3-ea5b-45d2-8416-b75e9ada8d7b}</Project>
+      <Name>atcProjector15</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcUtility\atcUtility15.vbproj">
       <Project>{67027820-9036-481e-80f6-077e5085f59d}</Project>
       <Name>atcUtility15</Name>
-      <Private>True</Private>
+      <Private>False</Private>
     </ProjectReference>
     <Reference Include="Interop.MapWinGIS">
       <Name>Interop.MapWinGIS</Name>
       <HintPath>..\Bin\Interop.MapWinGIS.dll</HintPath>
-      <Private>True</Private>
+      <Private>False</Private>
     </Reference>
     <Reference Include="MapWinGeoProc, Version=4.8.6.25969, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Bin\MapWinGeoProc.dll</HintPath>
-      <Private>True</Private>
+      <Private>False</Private>
     </Reference>
     <Reference Include="MapWinInterfaces, Version=4.8.6.42296, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Bin\MapWinInterfaces.dll</HintPath>
-      <Private>True</Private>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System">
       <Name>System</Name>
@@ -163,6 +162,11 @@
       <Name>System.Windows.Forms</Name>
     </Reference>
     <Reference Include="System.XML" />
+    <ProjectReference Include="..\atcData\atcData15.vbproj">
+      <Project>{a9a00cad-9ead-4228-ab08-6dc3baf253aa}</Project>
+      <Name>atcData15</Name>
+      <Private>False</Private>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
