--- a/atcDurationCompare/atcDurationCompare-D4EM10.vbproj
+++ b/atcDurationCompare/atcDurationCompare-D4EM10.vbproj
@@ -61,7 +61,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
-    <OutputPath>..\bin-D4EM10\x86Debug\</OutputPath>
+    <OutputPath>..\..\D4EM\Bin4.0\</OutputPath>
     <DefineConstants>GISProvider="DotSpatial"</DefineConstants>
     <DocumentationFile>atcDurationCompare.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022,42353,42354,42355</NoWarn>
