--- a/atcMwGisUtility/atcMwGisUtility15.vbproj
+++ b/atcMwGisUtility/atcMwGisUtility15.vbproj
@@ -147,13 +147,14 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\atcData\atcData15.vbproj">
-      <Project>{ac301067-c700-4cea-bed6-97f90960f5f2}</Project>
-      <Name>atcData15</Name>
-    </ProjectReference>
     <ProjectReference Include="..\MapWinUtility\BASINS-MapWinUtility15.vbproj">
       <Project>{33E88992-742F-4D13-823F-35D6A07B1AA1}</Project>
       <Name>BASINS-MapWinUtility15</Name>
+      <Private>False</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\atcData\atcData15.vbproj">
+      <Project>{A9A00CAD-9EAD-4228-AB08-6DC3BAF253AA}</Project>
+      <Name>atcData15</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcUtility\atcUtility15.vbproj">
