--- a/atcUSGSBaseflow/atcUSGSBaseflow15.vbproj
+++ b/atcUSGSBaseflow/atcUSGSBaseflow15.vbproj
@@ -83,23 +83,18 @@
     <Reference Include="Interop.MapWinGIS, Version=4.8.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Bin\Interop.MapWinGIS.dll</HintPath>
-      <Private>True</Private>
+      <Private>False</Private>
     </Reference>
     <Reference Include="MapWinInterfaces, Version=4.8.1.28373, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Bin\MapWinInterfaces.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System">
       <Private>False</Private>
     </Reference>
-    <Reference Include="System.Drawing">
-      <Private>False</Private>
-    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
-      <Private>False</Private>
     </Reference>
     <Reference Include="System.XML" />
     <Reference Include="ZedGraph, Version=5.1.3.0, Culture=neutral, PublicKeyToken=02a83cbd123fcd60, processorArchitecture=MSIL">
@@ -210,48 +205,57 @@
     <ProjectReference Include="..\atcBatchProcessing\atcBatchProcessing15.vbproj">
       <Project>{7e95fcaa-7b7c-4585-8ee2-58db97ed9110}</Project>
       <Name>atcBatchProcessing15</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcControls\atcControls15.vbproj">
-      <Project>{f73269c2-2f1f-4ac0-8162-7b19995dd53c}</Project>
+      <Project>{B219575F-1541-41DB-9FA4-D9D7CD62B4A5}</Project>
       <Name>atcControls15</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcData\atcData15.vbproj">
-      <Project>{ac301067-c700-4cea-bed6-97f90960f5f2}</Project>
+      <Project>{A9A00CAD-9EAD-4228-AB08-6DC3BAF253AA}</Project>
       <Name>atcData15</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcDurationCompare\atcDurationCompare15.vbproj">
-      <Project>{fbaa545b-7d95-43a3-8a4f-cc664d7db201}</Project>
+      <Project>{FBAA545B-7D95-43A3-8A4F-CC664D7DB201}</Project>
       <Name>atcDurationCompare15</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcGraphExperimental\atcGraph15.vbproj">
-      <Project>{d52e1a9c-e219-4df7-9ca8-b4fd1b28cec9}</Project>
+      <Project>{D52E1A9C-E219-4DF7-9CA8-B4FD1B28CEC9}</Project>
       <Name>atcGraph15</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcTimeseriesBaseflow\atcTimeseriesBaseflow15.vbproj">
       <Project>{f9a4070c-1faf-4d17-a8e6-7eb19d414b05}</Project>
       <Name>atcTimeseriesBaseflow15</Name>
-      <Private>True</Private>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcTimeseriesRDB\atcTimeseriesRDB15.vbproj">
-      <Project>{82530a5b-ff39-4b9f-8a04-881468dfc662}</Project>
+      <Project>{82530A5B-FF39-4B9F-8A04-881468DFC662}</Project>
       <Name>atcTimeseriesRDB15</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcUSGSUtility\atcUSGSUtility15.vbproj">
-      <Project>{4dbc8159-1072-41fa-9242-933e12a88ee6}</Project>
+      <Project>{4DBC8159-1072-41FA-9242-933E12A88EE6}</Project>
       <Name>atcUSGSUtility15</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcUtility\atcUtility15.vbproj">
-      <Project>{67027820-9036-481e-80f6-077e5085f59d}</Project>
+      <Project>{67027820-9036-481E-80F6-077E5085F59D}</Project>
       <Name>atcUtility15</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\BASINS\GWToolbox15.vbproj">
       <Project>{37d44868-95ce-4a21-a43a-13e7e7f2ad09}</Project>
       <Name>GWToolbox15</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\MapWinUtility\BASINS-MapWinUtility15.vbproj">
       <Project>{33E88992-742F-4D13-823F-35D6A07B1AA1}</Project>
       <Name>BASINS-MapWinUtility15</Name>
-      <Private>True</Private>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
