--- a/atcHspfSupport/atcHspfSupport-D4EM10.vbproj
+++ b/atcHspfSupport/atcHspfSupport-D4EM10.vbproj
@@ -87,6 +87,9 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="atcReport">
+      <HintPath>..\bin\Plugins\BASINS\atcReport.dll</HintPath>
+    </Reference>
     <Reference Include="atcSynopInput">
       <HintPath>..\bin\Plugins\BASINS\atcSynopInput.dll</HintPath>
     </Reference>
@@ -117,8 +120,8 @@
     <Compile Include="atcHspfConstituentBalance.vb" />
     <Compile Include="atcHspfDailyMonthlyCompareStats.vb" />
     <Compile Include="atcHspfExpertAdvice.vb" />
-    <Compile Include="atcHspfExpertSystem.vb" />
     <Compile Include="atcHspfConstituentBudget.vb" />
+    <Compile Include="atcHspfExpertSystemEXPPlus.vb" />
     <Compile Include="atcHspfWatershedConstituentBalance.vb" />
     <Compile Include="atcHspfWatershedSummary.vb" />
     <Compile Include="atcHspfWatershedSummaryOverland.vb" />
@@ -196,11 +199,6 @@
     <ProjectReference Include="..\atcGraphExperimental\atcGraph-D4EM10.vbproj">
       <Project>{D52E1A9C-E219-4DF7-9CA8-B4FD1B28CEC9}</Project>
       <Name>atcGraph-D4EM10</Name>
-      <Private>False</Private>
-    </ProjectReference>
-    <ProjectReference Include="..\atcReport\atcReport-D4EM10.vbproj">
-      <Project>{EE3BB0CA-BB0A-4FB6-9AB3-E73F57DD4A21}</Project>
-      <Name>atcReport-D4EM10</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\atcTimeseriesMath\atcTimeseriesMath-D4EM10.vbproj">
