Added code for making Bar graphs. Updated the code for Box and Whiskers. Updated the main code that calls for plotting the box and whiskers plot.

--- a/.gitignore
+++ b/.gitignore
@@ -334,3 +334,20 @@
 /local/AnyDebug/Plugins/BASINS
 /atcMwGisUtility/obj/Debug
 /HSPEXP/HSPEXP+15.vbproj.user
+/HSPEXP/bin/Debug/app.publish/HSPEXP+.exe
+/HSPEXP/bin/Debug/atcBasinsObsWQ.pdb
+/HSPEXP/bin/Debug/atcBasinsObsWQ.dll
+/HSPEXP/bin/Debug/stdole.dll
+/HSPEXP/bin/Debug/MapWinGeoProc.dll
+/HSPEXP/bin/Debug/MapWindow.Interfaces.dll
+/HSPEXP/bin/Debug/HSPEXP+.chm
+/HSPEXP/bin/Debug/AxInterop.MapWinGIS.xml
+/HSPEXP/bin/Debug/AxInterop.MapWinGIS.dll
+/HSPEXP/bin/Debug/atcList.xml
+/HSPEXP/bin/Debug/atcList.pdb
+/HSPEXP/bin/Debug/atcList.dll
+/HSPEXP/bin/Debug/atcHspfSupport.xml
+/HSPEXP/bin/x86/Debug/MapWinGeoProc.dll
+/HSPEXP/bin/x86/Debug/MapWindow.Interfaces.dll
+/HSPEXP/bin/x86/Debug/AxInterop.MapWinGIS.xml
+/HSPEXP/bin/x86/Debug/AxInterop.MapWinGIS.dll
