--- a/atcHspfSupport/atcHspfSupport-D4EM10.vbproj
+++ b/atcHspfSupport/atcHspfSupport-D4EM10.vbproj
@@ -133,6 +133,7 @@
     </Compile>
     <Compile Include="modAnnualCompareStats.vb" />
     <Compile Include="modGraph.vb" />
+    <Compile Include="modGraphBarGraphs.vb" />
     <Compile Include="modGraphBoxWhiskers.vb" />
     <Compile Include="modMonthlyAverageCompareStats.vb" />
     <Compile Include="modUtility.vb" />
