The area factor was updated to save the area in square miles. That area is used for calculating interval before calculating baseflow.

--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,35 @@
 /HSPEXP/bin/x86/Debug/MapWindow.Interfaces.dll
 /HSPEXP/bin/x86/Debug/AxInterop.MapWinGIS.xml
 /HSPEXP/bin/x86/Debug/AxInterop.MapWinGIS.dll
+/atcBatchProcessing/obj/Debug
+/atcDataTree/obj/Debug
+/atcEvents/obj/Debug
+/atcGisUtilities/obj/Debug
+/atcLandUse/obj/Debug
+/atcNOAA/obj/Debug
+/atcNOAAHPD/obj/Debug/atcNOAAHPD.dll
+/atcNOAAHPD/obj/Debug
+/atcNOAAISH/obj/Debug
+/atcProjector/obj/Debug
+/atcSeasonalAttributes/obj/Debug
+/atcSeasons/obj/Debug
+/atcSediment/HTMLBuilder
+/atcStatistics/obj/Debug
+/atcSWATDBF/obj/Debug
+/atcSWSTAT/obj/Debug
+/atcSynopInput/obj/Debug
+/atcSynopticAnalysis/obj/Debug
+/atcTimeseriesBaseflow/obj/Debug
+/atcTimeseriesD4EM/obj/Debug
+/atcTimeseriesDbf/obj/Debug
+/atcTimeseriesFEQ/obj/Debug
+/atcTimeseriesNdayHighLow/obj/Debug
+/atcTimeseriesRDB/obj/Debug
+/atcTimeseriesWRDB/obj/Debug
+/atcUSGSBaseflow/obj/Debug
+/atcUSGSDF2P/obj/Debug
+/atcUSGSRecess/obj/Debug
+/atcUSGSRora/obj/Debug
+/atcUSGSUtility/obj/Debug
+/atcUSGSWTF/obj/Debug
+/BASINS/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
