--- a/WinHSPF/WinHSPF15.vbproj
+++ b/WinHSPF/WinHSPF15.vbproj
@@ -481,6 +481,9 @@
   <ItemGroup>
     <Content Include="Basins.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
