Updated the About window of WinHSPF 3.1.

--- a/.gitignore
+++ b/.gitignore
@@ -383,3 +383,4 @@
 /atcUSGSUtility/obj/Debug
 /atcUSGSWTF/obj/Debug
 /BASINS/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+/HSPEXP/HSPEXP+-D4EM10_common.vbproj.user
