--- a/WinHSPF/WinHSPF15.vbproj
+++ b/WinHSPF/WinHSPF15.vbproj
@@ -480,10 +480,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Basins.ico" />
+    <None Include="Resources\BasinsLogo.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
