--- a/.gitignore
+++ b/.gitignore
@@ -385,3 +385,5 @@
 /BASINS/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
 /HSPEXP/HSPEXP+-D4EM10_common.vbproj.user
 /WinHSPF/WinHSPF15.vbproj.user
+HSPEXP/bin/x86/Debug/atcBasinsObsWQ.dll
+*.pdb
