Stability bug fixes and new D4EM10 project files frmFilterData and modStat: ensure tostring is called on non-null object clsGraphProbability: not to increase legend font size other clean up items

--- a/atcUSGSBaseflow/atcUSGSBaseflow15.vbproj
+++ b/atcUSGSBaseflow/atcUSGSBaseflow15.vbproj
@@ -79,6 +79,7 @@
     <Reference Include="atcUSGSDF2P, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\bin\Plugins\BASINS\atcUSGSDF2P.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Interop.MapWinGIS, Version=4.8.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
