Initial test data for Simulation Manager

--- a/atcGraphExperimental/atcGraph-D4EM10.vbproj
+++ b/atcGraphExperimental/atcGraph-D4EM10.vbproj
@@ -103,6 +103,10 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MapWindow.Interfaces">
+      <HintPath>..\Bin\MapWindow.Interfaces.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System">
       <Name>System</Name>
     </Reference>
